# Embedded-Repo

./: README.md  v32g410.jflash
Aduino/sketch_oct12a/: sketch_oct12a.ino
ESP32/button_test/: sdkconfig
ESP32/gatt_server_service_table/: sdkconfig
ESP32/sdmmc/: sdkconfig
ESP32/test/: sdkconfig(save)
ESP32/test2/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
ESP32/test2/main/: CMakeLists.txt  idf_component.yml  main.c
ESP32/test2/main/ble/: gatts_table_creat_demo.c  gatts_table_creat_demo.h
ESP32/test2/main/button/: button.c  button.h
ESP32/test2/main/id_nvs/: id_nvs.c  id_nvs.h
ESP32/test2/main/include/: main.h
ESP32/test2/main/message/: message.c  message.h
ESP32/test2/main/mp3/: mp3_main.c  mp3_main.h  shine_mp3.c
ESP32/test2/main/recorder/: i2s_recorder.c  i2s_recorder.h
ESP32/test2/main/sdcard/: sdcard.c  sdcard.h
ESP32/test2/main/strip/: strip.c
ESP32_REPO/Electronic_work_badge/: partitions.csv  sdkconfig  sdkconfig.old  test2.code-workspace
ESP32_REPO/Electronic_work_badge/main/: CMakeLists.txt  idf_component.yml  main.c
ESP32_REPO/Electronic_work_badge/main/ble/: gatts_table_creat_demo.c  gatts_table_creat_demo.h
ESP32_REPO/Electronic_work_badge/main/button/: gpio_button.c  gpio_button.h
ESP32_REPO/Electronic_work_badge/main/codec/: codec.c  codec.h
ESP32_REPO/Electronic_work_badge/main/id_nvs/: id_nvs.c  id_nvs.h
ESP32_REPO/Electronic_work_badge/main/include/: main.h
ESP32_REPO/Electronic_work_badge/main/led/: led.c  led.h
ESP32_REPO/Electronic_work_badge/main/message/: message.c  message.h
ESP32_REPO/Electronic_work_badge/main/recorder/: i2s_recorder.c  i2s_recorder.h
ESP32_REPO/Electronic_work_badge/main/sdcard/: sdcard.c  sdcard.h
ESP32_REPO/Electronic_work_badge/main/strip/: strip.h
ESP32_REPO/button_test/: CMakeLists.txt
IAR_REPO/f103rct6_lvgl/: f103rct6_lvgl.ioc  lv_conf.h
IAR_REPO/f103rct6_lvgl2/: f103rct6_lvgl2.ioc  lv_conf.h
IAR_REPO/f407_5iar/: f407_5.ioc
IAR_REPO/f407_5iar(cubeai)/: .mxproject
IAR_REPO/f407_freertos/: .mxproject  f407_freertos.ioc
(+2574 files in other folders)
