idf_component_register(SRCS 
                        "main.c" 
                        "strip/strip.c" 
                        "button/button.c"
                        "button/bsp_button.c"
                        "ble/gatts_table_creat_demo.c"
                        "recorder/i2s_recorder.c"
                        "mp3/shine_mp3.c"
                        "mp3/mp3_main.c"
                        "sdcard/sdcard.c"
                        "sr_ringbuf/ringbuf.c"
                        "id_nvs/id_nvs.c"
                        "message/message.c"
                    INCLUDE_DIRS 
                        "." 
                        "include" 
                        "strip" 
                        "button"
                        "ble"
                        "recorder"
                        "mp3"
                        "sdcard"
                        "sr_ringbuf"
                        "id_nvs"
                        "message")
