idf_component_register(SRCS 
                        "main.c" 
                        "strip/strip.c" 
                        "ble/gatts_table_creat_demo.c"
                        "recorder/i2s_recorder.c"
                        "sdcard/sdcard.c"
                        "sr_ringbuf/ringbuf.c"
                        "id_nvs/id_nvs.c"
                        "message/message.c"
                        "button/gpio_button.c"
                        "led/led.c"
                        "codec/codec.c"
                    INCLUDE_DIRS 
                        "." 
                        "include" 
                        "strip" 
                        "button"
                        "ble"
                        "recorder"
                        "sdcard"
                        "sr_ringbuf"
                        "id_nvs"
                        "message"
                        "led"
                        "codec")
